--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,33 +6,33 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+<div class="">
+    <div class="">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
                 <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <div asp-validation-summary="ModelOnly" class=""></div>
+                <div class="">
+                    <input asp-for="Input.Email" class="" />
+                    <label asp-for="Input.Email" class=""></label>
+                    <span asp-validation-for="Input.Email" class=""></span>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <div class="">
+                    <input asp-for="Input.Password" class="" />
+                    <label asp-for="Input.Password" class=""></label>
+                    <span asp-validation-for="Input.Password" class=""></span>
                 </div>
                 <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
+                    <div class="">
+                        <label asp-for="Input.RememberMe" class="">
+                            <input class="" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="">Log in</button>
                 </div>
                 <div>
                     <p>
@@ -48,7 +48,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
@@ -64,12 +64,12 @@
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="">
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
