--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Logout.cshtml
@@ -9,8 +9,8 @@
     @{
         if (User.Identity.IsAuthenticated)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+            <form class="">
+                <button type="submit" class="">Click here to Logout</button>
             </form>
         }
         else
