--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,36 +6,36 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
+<div class="">
+    <div class="">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+            <div asp-validation-summary="ModelOnly" class=""></div>
+            <div class="">
+                <input asp-for="Input.Email" class="" />
                 <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <span asp-validation-for="Input.Email" class=""></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+            <div class="">
+                <input asp-for="Input.Password" class="" />
                 <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <span asp-validation-for="Input.Password" class=""></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+            <div class="">
+                <input asp-for="Input.ConfirmPassword" class="" />
                 <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <span asp-validation-for="Input.ConfirmPassword" class=""></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.UserRegistrationKey" class="form-control" autocomplete="new-password" aria-required="true" />
+            <div class="">
+                <input asp-for="Input.UserRegistrationKey" class="" />
                 <label asp-for="Input.UserRegistrationKey"></label>
-                <span asp-validation-for="Input.UserRegistrationKey" class="text-danger"></span>
+                <span asp-validation-for="Input.UserRegistrationKey" class=""></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -51,12 +51,12 @@
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="">
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
