--- a/EagleEatsFinal/Views/Shared/_LoginPartial.cshtml
+++ b/EagleEatsFinal/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,37 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<div class="bottomnav" style="margin-top: auto">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+    
+        <a class="nav-link nav-bottom" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+        <div class="nav-item">
+            <span>Hello @User.Identity?.Name!</span>
+            </div></a>
+    
+        <a class="nav-link" id="logout" onclick="document.getElementById('logoutForm').submit()">
+        <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" class="nav-item">
+            <span>Logout</span>
         </form>
-    </li>
+        </a>
+    
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    
+        <a class="nav-link nav-bottom" id="register" asp-area="Identity" asp-page="/Account/Register">
+        <div class="nav-item">
+            <span>Register</span>
+            </div>
+            </a>
+    
+    
+        <a class="nav-link nav-bottom" id="login" asp-area="Identity" asp-page="/Account/Login">
+        <div class="nav-item">
+            <span>Login</span>
+            </div>
+            </a>
+    
 }
-</ul>
+</div>
