--- a/EagleEatsFinal/wwwroot/css/site.css
+++ b/EagleEatsFinal/wwwroot/css/site.css
@@ -1,18 +1,226 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+:root {
+  font-size: max(1vw, 12px);
+  --primary-black: hsl(0, 0%, 9%);
+  --primary-white: #e5eeed;
+  --test-black: #1e1e24;
+  --primary-color: hsl(214, 59%, 52%);
+  --secondary-color: hsl(0, 59%, 50%); /* #ee5454 */
+  font-family: "Open Sans";
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  color: var(--primary-black);
+
+}
 html {
-  font-size: 14px;
+    box-sizing: border-box;
+    overflow-x: hidden;
+
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+.nav-item {
+  padding-block: 1rem;
+
+}
+.nav-link > div {
+  background-color: transparent;
+  transition: background-color 100ms ease-in;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
+.nav-link > div:hover {
+  background-color: hsl(0, 0%, 10%);
+}
+
+.nav-link > div > span {
+  filter: grayscale(80%) opacity(.7);
+  transition: filter 100ms ease-in;
+  display: inline-flex;
+  align-items: center;
+}
+.nav-link > div:hover > span {
+  filter: grayscale(0%) opacity(1);
   }
+
+.nav-link > div > span > svg {
+    height: min(2rem, 3.25vh);
+    width: min(2rem, 3.25vh);
+    fill: var(--primary-color);
+    margin-right: 1rem;
+
+}
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  color: var(--secondary-color);
+  text-transform: uppercase;
+  font-family: 'Bebas Neue';
+  font-kerning:none;
+  letter-spacing: .1em;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.5rem;
+}
+h3 {
+  font-size: 3rem;
+}
+h4 {
+  font-size: 2.5rem;
+}
+h5 {
+  font-size: 2rem;
+}
+h6 {
+  font-size: 1.5rem;
 }
 
+
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+  padding-inline: auto;
+}
+.nav-link {
+  font-weight: 900;
+  text-transform:uppercase;
+  font-size: min(2rem, 3.25vh);
+
+}
+
+.brand {
+  font-weight:400;
+  font-kerning: none;
+  font-family: 'Bebas Neue';
+  letter-spacing: .2rem;
+  font-size: min(3.75rem, 5vh);
+}
+
+.nav-item {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.nav-bottom div{
+margin-top: auto;
+}
 body {
-  margin-bottom: 60px;
+margin:0;
+padding: 0;
+min-height: 100vh;
+display:flex;
+flex-direction: row;
+background-image: linear-gradient(#eeeeed 50%, var(--primary-white));
+background-repeat: no-repeat;
 }
+.nav-wrapper, .main-content-wrapper {
+height: 100vh;
+display: flex;
+}
+.nav-wrapper {
+  width: 20rem;
+  background-image: linear-gradient(var(--primary-black) 80%, var(--test-black));
+}
+.navigation-bar {
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+}
+main {
+  width: 100%;
+}
+main a {
+  color: var(--primary-color);
+}
+
+.main-content-wrapper {
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titlebox {
+  display:flex;
+  height: min(20vh, 200px);
+  background-image: linear-gradient(to right, var(--primary-black) 80%, var(--test-black));
+  background-repeat: no-repeat;
+  width: 100%;
+  align-items: center;
+  padding-inline: 2vw;
+
+
+}
+
+.titlebox > h1 {
+  text-align: center;
+  font-size: max(4rem, 5vh)
+}
+.header-image {
+  display:grid;
+  grid-template-columns: repeat(12, calc(100%/12));
+  grid-template-rows: repeat(12, calc(100%/12));
+  height: max(50vh, 25vw);
+  width: 100%;
+  background-image: url("/img/usihome.jpg");
+  background-position: center;
+  background-size: cover;
+
+}
+
+.title-link {
+  font-weight: 700;
+  height: 100%;
+  display:flex;
+align-items: center;
+width: 6vw;
+justify-content: center;
+font-size: max(2rem, 2vh)
+}
+.title-button-box {
+  margin-left: auto;
+  display: flex;
+  height: 100%;
+  column-gap: max(3rem, 8vh);
+}
+.title-item > span {
+  text-transform: uppercase;
+  vertical-align: middle;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 768px) {
+  body {
+    flex-direction: column-reverse;
+  }
+
+  .brand {
+    display: none;
+  }
+
+  .nav-wrapper {
+    height: 20rem;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+  }
+  .titlebox {
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .titlebox > h1 {
+    text-align: center;
+  }
+  .title-button-box {
+    display: none;
+  }
+
+
+}
+
