--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,29 +4,28 @@
 @{
     ViewData["Title"] = "Log in";
 }
+<div class="titlebox"><h1>@ViewData["Title"]</h1></div>
 
-<h1>@ViewData["Title"]</h1>
 <div class="">
     <div class="">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
+        <section class="form-wrapper">
+            <form id="account" method="post" class="form">
+
                 <div asp-validation-summary="ModelOnly" class=""></div>
                 <div class="">
-                    <input asp-for="Input.Email" class="" />
-                    <label asp-for="Input.Email" class=""></label>
-                    <span asp-validation-for="Input.Email" class=""></span>
+                    <label asp-for="Input.Email" class="form-item-label"></label>
+                    <input asp-for="Input.Email" class="form-item-input" />
+                    <span asp-validation-for="Input.Email" class="form-item-validation-text"></span>
                 </div>
                 <div class="">
-                    <input asp-for="Input.Password" class="" />
-                    <label asp-for="Input.Password" class=""></label>
-                    <span asp-validation-for="Input.Password" class=""></span>
+                    <label asp-for="Input.Password" class="form-item-label"></label>
+                    <input asp-for="Input.Password" class="form-item-input" />
+                    <span asp-validation-for="Input.Password" class="form-item-validation-text"></span>
                 </div>
                 <div>
                     <div class="">
                         <label asp-for="Input.RememberMe" class="">
-                            <input class="" />
+                            <input type="checkbox" class="" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
@@ -48,37 +47,7 @@
             </form>
         </section>
     </div>
-    <div class="">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+ 
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
