--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,21 @@
                 <span asp-validation-for="Input.Email" class=""></span>
             </div>
             <div class="">
+                <input asp-for="Input.FirstName" class="" />
+                <label asp-for="Input.FirstName"></label>
+                <span asp-validation-for="Input.FirstName" class=""></span>
+            </div>
+            <div class="">
+                <input asp-for="Input.LastName" class="" />
+                <label asp-for="Input.LastName"></label>
+                <span asp-validation-for="Input.LastName" class=""></span>
+            </div>
+            <div class="">
+                <input asp-for="Input.Address" class="" />
+                <label asp-for="Input.Address"></label>
+                <span asp-validation-for="Input.Address" class=""></span>
+            </div>
+            <div class="">
                 <input asp-for="Input.Password" class="" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class=""></span>
