--- a/EagleEatsFinal/Views/Home/Index.cshtml
+++ b/EagleEatsFinal/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using EagleEatsFinal.Data;
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 @{
     ViewData["Title"] = "Home";
 }
