--- a/EagleEatsFinal/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/EagleEatsFinal/Areas/Identity/Pages/Account/Logout.cshtml
@@ -10,6 +10,7 @@
         if (User.Identity.IsAuthenticated)
         {
             <form class="">
+                <p>Log out of your account</p>
                 <button type="submit" class="">Click here to Logout</button>
             </form>
         }
