--- a/EagleEatsFinal/Views/Order/RequestItem.cshtml
+++ b/EagleEatsFinal/Views/Order/RequestItem.cshtml
@@ -10,6 +10,7 @@
 <section class="form-wrapper">
     <div asp-validation-summary="All" class="form-item-validation-text"></div>
     <form id="item-form" method="post" class="form">
+        <h5>Detail your item</h5>
         <div class="form-item">
             <label asp-for="Name" class="form-item-label"></label>
                 <input asp-for="Name" class="form-item-input"/>
