--- a/EagleEatsFinal/Views/Shared/_LoginPartial.cshtml
+++ b/EagleEatsFinal/Views/Shared/_LoginPartial.cshtml
@@ -9,11 +9,11 @@
     
         <a class="nav-link nav-bottom" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
         <div class="nav-item">
-            <span class="nav-text">@User.Identity?.Name</span>
+            <span class="nav-text">@UserManager.GetUserAsync(User).Result.FirstName</span>
             </div></a>
     
-        <a id="logout" class="nav-link nav-bottom" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" onclick="document.getElementById('logoutForm').submit()">
-        <form id="logoutForm" class="nav-item">
+        <a id="logout" class="nav-link nav-bottom" onclick="document.getElementById('logoutForm').submit()">
+        <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" class="nav-item">
             <span class="nav-text">Logout</span>
         </form>
         </a>
